widening div to fix whitespace

--- a/csci340/labs/lab2/style.css
+++ b/csci340/labs/lab2/style.css
@@ -52,6 +52,7 @@ div{
   text-align: center;
   border:5px solid;
   border-radius: 5px;
+  width: 100%;
 }
 
 
